<resources>
    <string name="app_name">Projeto2.0</string>
    <string name="e_mail">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="logar">Logar</string>
    <string name="logo">Logo</string>
    <string name="login_de_administrador">Login de administrador</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="insira_seu_nome_completo">Insira seu nome completo:</string>
    <string name="insira_seu_n_mero_de_celular">Insira seu número de celular:</string>
    <string name="insira_o_nome_do_animal_de_seu_interesse">Insira o nome do animal de seu interesse:</string>
    <string name="insira_sua_idade">Insira sua idade:</string>
    <string name="todos_na_resid_ncia_concordam_com_a_ado_o">Todos na residência concordam com a adoção?</string>
    <string name="voc_tem_outros_animais_em_casa_se_sim_quantos_e_quais">Você tem outros animais em casa? se sim, quantos e quais?</string>
    <string name="s_o_castrados_e_vacinados">São castrados e vacinados?</string>
    <string name="voc_mora_em_casa_ou_apartamento_alugado_ou_pr_prio">Você mora em casa ou apartamento? Alugado ou próprio?</string>
    <string name="voc_tem_um_local_seguro_para_o_seu_cachorro_ou_gato">Você tem um local seguro para o seu cachorro ou gato?</string>
    <string name="insira_seu_endere_o">Insira seu endereço:</string>
    <string name="insira_sua_renda_mensal">Insira sua renda mensal:</string>
    <string name="voc_tem_condi_es_f_sicas_mentais_e_financeiras_de_manter_um_animal_uma_boa_ra_o_visitas_ao_veterin_rio_castra_o_passeios">Você tem condições físicas, mentais e financeiras de manter um animal? Uma boa ração? Visitas ao veterinário? Castração? Passeios?</string>
    <string name="a_castra_o_e_vacina_o_do_animal_obrigat_ria_voc_concorda_com_isso">A castração e vacinação do animal é OBRIGATÓRIA, você concorda com isso?</string>
    <string name="existe_uma_taxa_de_ado_o_de_r_30_00_voc_concorda_em_contribuir">Existe uma taxa de adoção de R$30,00. Você concorda em contribuir?</string>
    <string name="favor_enviar_os_seguintes_documentos_nfoto_do_rg_nfoto_do_comprovante_de_renda_nfoto_do_local_onde_o_animal_ir_ficar_terreno_casa_canil_nfoto_das_telas_nse_tiver_outros_animais_foto_dos_mesmos_e_das_suas_carteiras_de_vacina_o">Favor enviar os seguintes documentos\nFoto do RG\nFoto do comprovante de renda;\nFoto do local onde o animal irá ficar (terreno, casa, canil…);\nFoto das TELAS;\nSe tiver outros animais, foto dos mesmos e das suas carteiras de vacinação.</string>
    <string name="enviar_formul_rio">Enviar formulário</string>
    <string name="selecionar_imagens_complementares">Selecionar imagens complementares</string>
    <string name="animal_de_interesse">Animal de interesse</string>
    <string name="bairro">Bairro</string>
    <string name="voc_mora_em_casa_ou_apartamento_pr_prio_ou_alugado">Você mora em casa ou apartamento? Próprio ou alugado?</string>
    <string name="cep">CEP</string>
    <string name="idade">Idade</string>
    <string name="nome_completo">Nome completo</string>
    <string name="voc_tem_outros_animais_se_sim_quantos_e_quais">Você tem outros animais? Se sim, quantos e quais?</string>
    <string name="ex_1600">ex: 1600</string>
    <string name="rua_e_n_mero">Rua e número</string>
    <string name="telefone">Telefone</string>
    <string name="estado_uf">Estado (UF)</string>
    <string name="n_o">Não</string>
    <string name="sim">Sim</string>
    <string name="formul_rio_de_ado_o">Formulário de adoção</string>
    <string name="voltar">Voltar</string>
    <string name="logo_acapra">Logo ACAPRA</string>
    <string name="adicionar_pet">Adicionar Pet</string>
    <string name="registrar_admin">Registrar Admin</string>
    <string name="formul_rios">Formulários</string>
    <string name="jo_o_carvalho">João Carvalho</string>
    <string name="carlos_alberto">Carlos Alberto</string>
    <string name="ketlin_fernandes">Ketlin Fernandes</string>
    <string name="registrar">Registrar</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_seu_telefone">Digite seu telefone</string>
    <string name="bolsonaro">Bolsonaro</string>
    <string name="cachorro">Cachorro</string>
    <string name="gato">Gato</string>
    <string name="lula">Lula</string>
    <string name="todos">Todos</string>
    <string name="adotar">Adotar</string>
    <string name="logar_adm">Logar ADM</string>
    <string name="branca_foi_retirada_de_maus_tratos_era_usada">Branca foi retirada de maus tratos, era usada...</string>
    <string name="branca">Branca</string>
    <string name="insira_o_nome_completo">Insira o nome completo:</string>
</resources>