<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:cardBackgroundColor="#5b5786"
            app:cardCornerRadius="32dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="361dp"
                android:layout_height="626dp"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:text="Registrar"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insira_seu_nome_completo"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:text="@string/insira_seu_nome_completo" />

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/digite_seu_e_mail"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="12dp"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:text="E-mail" />

                <EditText
                    android:id="@+id/txtSenha"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/digite_sua_senha"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:text="Telefone" />

                <EditText
                    android:id="@+id/txtSenha2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="Digete seu Telefone"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senha"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txtSenha3"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/digite_sua_senha"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/btnRegistra"
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/logar"
                    android:textColor="#5b5786"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</LinearLayout>
    </LinearLayout>
