<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#5b5786"
        android:padding="8dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/Logo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="Logo ACAPRA"
            android:src="@drawable/logo"
            tools:ignore="HardcodedText" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnAdocao"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#F6F6F6"
            android:text="@string/adotar"
            android:textAllCaps="false"
            android:textColor="#5b5786"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnIrLogin"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/logar_adm"
            android:textAllCaps="false"
            android:textColor="#5b5786"
            tools:ignore="TextSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintBounds" />
    </LinearLayout>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search"
        android:background="@color/white"
        android:layout_margin="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btTodos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/bg_button_disabled"
                        android:text="@string/todos"
                        android:textColor="@color/dark_gray"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btCachorro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/bg_button_disabled"
                        android:text="@string/cachorro"
                        android:textColor="@color/dark_gray"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btGato"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="5dp"
                        android:background="@drawable/bg_button_disabled"
                        android:text="@string/gato"
                        android:textColor="@color/dark_gray"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible" />

</LinearLayout>
